fix parallax display issues on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@ body {
 
 @media only screen and (max-width: 600px) {
     .parallax-container {
-        height: 130px;
+        height: 150px;
     }
 }
 
